# TripleT-API-Usage-Widget

./: .gitignore  README.md  claude_widget.py  install.sh  pyproject.toml  start_local.sh
.obsidian/: workspace.json
docs/superpowers/plans/: 2026-03-28-daemon-mode.md  2026-03-28-settings-dialog.md  2026-03-28-tui-mode.md  2026-04-07-cross-platform-support.md
docs/superpowers/specs/: 2026-03-28-daemon-mode-design.md  2026-03-28-settings-dialog-design.md  2026-03-28-tui-mode-design.md
tests/: test_tui.py
